--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>STORIES</title>
-        <link href="{% static 'dist/css/styles.css' %}" rel="stylesheet" />
+        <link href="{% static '../../dist/css/styles.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <link rel="icon" type="image/x-icon" href="{% static 'dist/assets/img/favicon.png' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static '../../dist/assets/img/favicon.png' %}" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
     </head>
