--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>STORIES</title>
-        <link href="../../../static/css/styles.css" rel="stylesheet" />
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <link rel="icon" type="image/x-icon" href="{% static '../../dist/assets/img/favicon.png' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.png' %}" />
         <script data-search-pseudo-elements defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.24.1/feather.min.js" crossorigin="anonymous"></script>
     </head>
@@ -201,7 +201,7 @@
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="{% static 'dist/js/scripts.js' %}"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init({
