majeur commit UX

--- a/storiesof/templates/storiesof/linkedin.html
+++ b/storiesof/templates/storiesof/linkedin.html
@@ -33,7 +33,12 @@
                     <section class="bg-light pb-10">
                         <div class="container">
                             <div class="row">
-
+                                <div class="col-md-6 col-xl-4 mb-5 mt-n5">
+                                    <a class="card card-portfolio h-100" href="../../linkedin_admin/{{ profil_linkedin_admin_id }}"
+                                        ><img class="card-img-top" src="https://source.unsplash.com/n3sqjJzZiBM/400x300" alt="..." />
+                                        <div class="card-body"><div class="card-title"><p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href=""><i class="fas fa-arrow-left ml-1"></i>Go back to your stories dashboard</p></div></div></a
+                                    >
+                                </div>
                                 {% for profil_linkedin in profils_linkedin %}
 
                                 <div class="col-md-6 col-xl-4 mb-5 mt-n5">
