ajout de l'export doc

--- a/storiesof/templates/storiesof/linkedin.html
+++ b/storiesof/templates/storiesof/linkedin.html
@@ -59,7 +59,7 @@
                                 <div class="col-xl-6 col-lg-8 col-md-10 text-center py-5">
                                     <h2>Ready to get Started?</h2>
                                     <p class="lead text-gray-500 mb-5">We'd love to hear from you about your branding and digital needs. We are currently accepting new clients.</p>
-                                    <a class="btn btn-primary btn-marketing rounded-pill" href="javascript:void(0);">Contact us</a>
+                                    <a class="btn btn-primary btn-marketing rounded-pill" href="../../report_export/{{ profil_linkedin_admin_id }}/{{ project_id }}">Export it!</a>
                                 </div>
                             </div>
                         </div>
