--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -145,7 +145,7 @@
                             <div class="row text-center">
                                 <div class="col-lg-4 mb-5">
                                     <h6 class="mb-3">Demo 1 - Basic</h6>
-                                    <a class="d-block rounded-lg lift lift-lg" href="header-basic.html"><img class="img-fluid rounded-lg" src="assets/img/screenshots/header-basic.jpg"/></a>
+                                    <a class="d-block rounded-lg lift lift-lg" href="header-basic.html"><img class="img-fluid rounded-lg" src="../../../static/assets/img/screenshots/header-basic.jpg"/></a>
                                 </div>
                                 <div class="col-lg-4 mb-5">
                                     <h6 class="mb-3">Demo 2 - Basic (Signup)</h6>
