--- a/storiesof/templates/storiesof/linkedin.html
+++ b/storiesof/templates/storiesof/linkedin.html
@@ -12,7 +12,7 @@
                                         <hr class="my-2" color="#fff">
                                         <h1 class="page-header-title mb-3">Steps</h1>
 
-                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°1: Send this personal link to each teamate you want to join this adventure</div>
+                                        <div class="badge badge-pill badge-primary-soft text-primary badge-marketing mb-3">Step n°1: Send this personal link to each teammate you want to join this adventure</div>
                                         <p>
                                         <a class="btn-teal btn rounded-pill px-4 ml-lg-4" onclick="copyToClipboard('<p>{{ linkedin_authorization_code_url_custom }}</p>')"><i class="fas fa-arrow-right ml-1"></i> Click to copy clipboard to get the magic link <i class="fas fa-arrow-left ml-1"></i></a>
                                         <script type="text/javascript">
