--- a/storiesof/templates/storiesof/linkedin_admin.html
+++ b/storiesof/templates/storiesof/linkedin_admin.html
@@ -50,7 +50,7 @@
                                         <img class="card-img-top" src="{{ profil_admin.photo }}" alt="..." />
 
                                         <div class="card-body p-3">
-                                            <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new project!<i class="fas fa-arrow-right ml-1"></i></p>
+                                            <p class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="">Create a new story!<i class="fas fa-arrow-right ml-1"></i></p>
                                         </div></a
                                     >
                                 </div>
@@ -89,7 +89,7 @@
                                 <div class="col-lg-4 mb-5 mb-lg-0">
                                     <a class="card card-link border-top border-top-lg border-green h-100 lift" href="#!"><div class="card-body p-5">
                                             <div class="icon-stack icon-stack-lg bg-green-soft text-green mb-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="fas fa-user-check"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg></div>
-                                            <h6>Number of teamates</h6>
+                                            <h6>Number of teammates</h6>
                                             <p class="card-text">Thanks to you, you manage to get aboard</p>
                                         </div>
                                         <div class="card-footer bg-transparent pt-0 pb-5"><div class="badge badge-pill badge-light font-weight-normal px-3 py-2">{{ profils_nb }} teamates</div></div></a>
