--- a/storiesof/templates/storiesof/linkedin_homepage.html
+++ b/storiesof/templates/storiesof/linkedin_homepage.html
@@ -11,7 +11,7 @@
                                         <p class="page-header-text mb-5">Create your own Linkedin company portfolio in 5 minutes</p>
                                         <a class="btn btn-teal btn-marketing rounded-pill lift lift-sm" href="{% url 'linkedin_auth_url' %}">Start your story now!<i class="fas fa-arrow-right ml-1"></i></a><a class="btn btn-link btn-marketing" href="https://docs.startbootstrap.com/sb-ui-kit-pro/quickstart">Documentation</a>
                                     </div>
-                                    <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="50"><img class="img-fluid" src="assets/img/drawkit/color/drawkit-content-man-color.svg" /></div>
+                                    <div class="col-lg-6 d-none d-lg-block" data-aos="fade-up" data-aos-delay="50"><img class="img-fluid" src="static/assets/img/report_example.png" /></div>
                                 </div>
                             </div>
                         </div>
